--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<h1>pobierz mnie do zmiennej 'heading'</h1>
+		<div></div>
+		<h1>DOM, Window, Document...</h1>
+		<!-- <h1>pobierz mnie do zmiennej 'heading'</h1>
 <p>pobierz mnie do elementu tablico-podobnego razem z innymi paragrafami!</p>
 <p>pobierz mnie do elementu tablico-podobnego razem z innymi paragrafami!</p>
 <p>pobierz mnie do elementu tablico-podobnego razem z innymi paragrafami!</p>
 <div class="test">
     <p>pobierz DIV-a z klasą test do jakiejś zmiennej</p>
     <p id="test">następnie pobierz ten paragraf, ale nie przeszukuj całego `document`, przeszukaj tylko DIV-a z klasą test</p>
-</div>
+</div> -->
 		<script src="script.js"></script>
 	</body>
 </html>
