Added propagation and delegation exercises

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div></div>
 		<h1>DOM, Window, Document...</h1>
 		<!-- <h1>pobierz mnie do zmiennej 'heading'</h1>
 <p>pobierz mnie do elementu tablico-podobnego razem z innymi paragrafami!</p>
@@ -18,6 +17,13 @@
     <p>pobierz DIV-a z klasą test do jakiejś zmiennej</p>
     <p id="test">następnie pobierz ten paragraf, ale nie przeszukuj całego `document`, przeszukaj tylko DIV-a z klasą test</p>
 </div> -->
+		<div>
+			<div class="circle lime circle2">
+				<div class="circle blue">
+					<div class="circle gold circle2"></div>
+				</div>
+			</div>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
