--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<h1>DOM, Window, Document...</h1>
+		<!-- <h1>DOM, Window, Document...</h1> -->
 		<!-- <h1>pobierz mnie do zmiennej 'heading'</h1>
 <p>pobierz mnie do elementu tablico-podobnego razem z innymi paragrafami!</p>
 <p>pobierz mnie do elementu tablico-podobnego razem z innymi paragrafami!</p>
@@ -17,13 +17,18 @@
     <p>pobierz DIV-a z klasą test do jakiejś zmiennej</p>
     <p id="test">następnie pobierz ten paragraf, ale nie przeszukuj całego `document`, przeszukaj tylko DIV-a z klasą test</p>
 </div> -->
-		<div>
+		<!-- <div>
 			<div class="circle lime circle2">
 				<div class="circle blue">
 					<div class="circle gold circle2"></div>
 				</div>
 			</div>
+		</div> -->
+		<div>
+			<button class="toggle">kliknij mnie!</button>
+			<p class="test">napis testowy</p>
 		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
