Added new exercise (creating elements and styling in js)

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 				</div>
 			</div>
 		</div> -->
-		<div>
+		<!-- <div>
 			<button class="toggle">kliknij mnie!</button>
 			<p class="test">napis testowy</p>
-		</div>
+		</div> -->
 
-		<script src="script.js"></script>
+		<script src="./script.js"></script>
 	</body>
 </html>
