--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<img> </img>
 		<!-- <h1>DOM, Window, Document...</h1> -->
 		<!-- <h1>pobierz mnie do zmiennej 'heading'</h1>
 <p>pobierz mnie do elementu tablico-podobnego razem z innymi paragrafami!</p>
