--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Exercise space</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<img> </img>
+		<!-- <img> </img> -->
 		<!-- <h1>DOM, Window, Document...</h1> -->
 		<!-- <h1>pobierz mnie do zmiennej 'heading'</h1>
 <p>pobierz mnie do elementu tablico-podobnego razem z innymi paragrafami!</p>
@@ -29,7 +29,15 @@
 			<button class="toggle">kliknij mnie!</button>
 			<p class="test">napis testowy</p>
 		</div> -->
-
+		<div class="wrapper">
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
 		<script src="./script.js"></script>
 	</body>
 </html>
